--- a/slides.html
+++ b/slides.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en-US" manifest="cache.manifest">
+<html lang="en-US">
 <head>
 <meta charset="UTF-8">
 <title>Slides</title>
