--- a/slides.html
+++ b/slides.html
@@ -7,13 +7,75 @@
 </head>
 <body>
     <button type="button" class="prev handle" id="prev">&lt;</button>
-    <div class="tips">F11进入全屏，[Enter,Space,&#8594;,&#8595;]翻下一页，[Esc,&#8592;,&#8593;]翻上一页</div>
+    <div class="tips">F11进入全屏，[Enter,Space,&#8594;,&#8595;]翻下一页，[Esc,&#8592;,&#8593;]翻上一页 &nbsp;&nbsp;&nbsp;<a class="c-red" href="#" id="changeType">[切换风格]</a></div>
     <section class="slides" id="slides">
 
         <!-- 
             要添加ppt页面，只需复制article标签一份，
             article内部可随意修改，包括样式标签等 
         -->
+
+        <!-- 页面区 -->
+        <article class="page">
+            <h1>这里是页面1</h1>
+            <p>正文内容请添加到article标签内部</p>
+        </article>
+        <!-- /页面区 -->
+
+        <!-- 页面区 -->
+        <article class="page" >
+            <h1>这里是页面2</h1>
+        </article>
+        <!-- /页面区 -->
+
+        <!-- 页面区 -->
+        <article class="page" >
+            <h1>这里是页面3</h1>
+        </article>
+        <!-- /页面区 -->
+
+        <!-- 页面区 -->
+        <article class="page" >
+            <h1>这里是页面4</h1>
+        </article>
+        <!-- /页面区 -->
+
+        <!-- 页面区 -->
+        <article class="page">
+            <h1>这里是页面5</h1>
+        </article>
+        <!-- /页面区 -->
+
+        <!-- 页面区 -->
+        <article class="page">
+            <h1>这里是页面1</h1>
+            <p>正文内容请添加到article标签内部</p>
+        </article>
+        <!-- /页面区 -->
+
+        <!-- 页面区 -->
+        <article class="page" >
+            <h1>这里是页面2</h1>
+        </article>
+        <!-- /页面区 -->
+
+        <!-- 页面区 -->
+        <article class="page" >
+            <h1>这里是页面3</h1>
+        </article>
+        <!-- /页面区 -->
+
+        <!-- 页面区 -->
+        <article class="page" >
+            <h1>这里是页面4</h1>
+        </article>
+        <!-- /页面区 -->
+
+        <!-- 页面区 -->
+        <article class="page">
+            <h1>这里是页面5</h1>
+        </article>
+        <!-- /页面区 -->
 
         <!-- 页面区 -->
         <article class="page">
